crates/sourcepawn-studio/tests/text_document/signature_help/snapshots/main__text_document__signature_help__function_4.snap
---
source: crates/sourcepawn-studio/tests/text_document/signature_help/mod.rs
assertion_line: 51
expression: "signature_help(r#\"\n%! main.sp\nvoid foo(int bar, int baz) {\n    foo(bar,);\n            |\n            ^\n}\n\n\"#)"
---
{
  "signatures": [
    {
      "label": "void foo(int bar, int baz)",
      "parameters": [
        {
          "label": "bar"
        },
        {
          "label": "baz"
        }
      ],
      "activeParameter": 1
    }
  ],
  "activeParameter": 1
}
