crates/sourcepawn-studio/tests/text_document/signature_help/snapshots/main__text_document__signature_help__function_7.snap
---
source: crates/sourcepawn-studio/tests/text_document/signature_help/mod.rs
assertion_line: 102
expression: "signature_help(r#\"\n%! main.sp\n/**\n * @param bar    This is the bar parameter\n * @param ...    This is the rest parameter\n */\nvoid foo(int bar, any ...) {\n    foo(bar, 0, 1);\n                 |\n                 ^\n}\n\"#)"
---
{
  "signatures": [
    {
      "label": "void foo(int bar, any ...)",
      "documentation": {
        "kind": "markdown",
        "value": "_@param_ `bar` — >This is the bar parameter\n\n_@param_ `...` — >This is the rest parameter"
      },
      "parameters": [
        {
          "label": "bar",
          "documentation": {
            "kind": "markdown",
            "value": "This is the bar parameter"
          }
        },
        {
          "label": "...",
          "documentation": {
            "kind": "markdown",
            "value": "This is the rest parameter"
          }
        }
      ],
      "activeParameter": 2
    }
  ],
  "activeParameter": 2
}
